<resources>
    <string name="app_name">eCommerce_Task</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="more">More</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>